Python and vectorization

--- a/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/1. Python and Vectorization.ipynb
+++ b/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/1. Python and Vectorization.ipynb
@@ -370,14 +370,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "### Calculating for $m$ examples and $n = 2$ features <font color='red'>with</font> vectorization\n",
+    "# Vectorizing Logistic Regression\n",
+    "\n",
+    "**Calculating for $m$ examples and $n = 2$ features <font color='red'>with</font> vectorization**\n",
     "\n",
     "Consider that we have `m` training examples. In training using for loops, we make a prediction on the first example by computing $Z^{(1)}$. Then compute the activations $a^{(1)}$ in this first example. Next, we make a prediction on the second training example by computing $Z^{(2)}$ and then computing the activations $a^{(2)}$. Next, we make a prediction on the third example, by computing $Z^{(3)}$ and then computing the activations $a^{(3)}$, and so on. And you might need to do this `m` times if you have `m` training examples.\n",
     "\n",
     "$$\n",
     "\\begin{matrix}\n",
-    "z^{(1)} = w^Tx{(1)}+b & \\ \\ \\ \\ \\ & z^{(2)} = w^Tx{(2)}+b & \\ \\ \\ \\ \\ & z^{(3)} = w^Tx{(3)}+b \\\\ \n",
+    "z^{(1)} = w^Tx^{(1)}+b & \\ \\ \\ \\ \\ & z^{(2)} = w^Tx^{(2)}+b & \\ \\ \\ \\ \\ & z^{(3)} = w^Tx^{(3)}+b \\\\ \n",
     "a^{(1)} = \\sigma (z^{(1)}) & \\ \\ \\ \\ \\ & a^{(2)} = \\sigma (z^{(2)}) & \\ \\ \\ \\ \\ & a^{(3)} = \\sigma (z^{(3)}) \\\\\n",
     "\\end{matrix}\n",
     "$$\n",
@@ -444,67 +445,188 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Vectorizing Logistic Regression\n",
+    "# Vectorizing Logistic Regression's Gradient Output\n",
     "\n",
-    "### Implementing Vectorization in Forward Propagation \n",
+    "So, for the gradient computation, we computed $dz^{(1)}$ for the first example, which is $a^{(1)} - y^1$, $dz^{(2)}$ which is equal to $a^{(2)} - y^2$ and so on for all `m` training examples.\n",
+    "\n",
+    "$$\n",
+    "\\begin{matrix}\n",
+    "dz^{(1)} = a^{(1)} - y^1 & \\ \\ \\ \\ \\ & dz^{(2)} = a^{(2)} - y^2 & \\ \\ \\ \\ \\ & dz^{(3)} = a^{(3)} - y^3 \\\\ \n",
+    "\\end{matrix}\n",
+    "$$\n",
+    "\n",
+    "When vectorizing, we define a new variable `dZ` that contains $dz^{(1)}$, $dz^{(2)}$, up to $dz^{(m)}$ as illustred below. \n",
+    "\n",
+    "$$\n",
+    "dZ = \\begin{bmatrix}\n",
+    "dz^{(1)} & dz^{(2)} & \\ldots & dz^{(m)} \\\\ \n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "Note that, all the `dz` variables are stacked horizontally, generating a ($1, m$) matrix or alternatively a $\\mathbb{R}^{1,m}$ dimensional row vector. We know that `A` and `Y` are also matrices with variables stacked horizontally as:\n",
+    "\n",
+    "$$\n",
+    "A = \\begin{bmatrix}\n",
+    "a^{(1)} & a^{(2)} & \\ldots & a^{(m)} \\\\ \n",
+    "\\end{bmatrix} \\\\\n",
+    "Y = \\begin{bmatrix}\n",
+    "y^{(1)} & y^{(2)} & \\ldots & y^{(m)} \\\\ \n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "Based on these definitions, we can compute `dZ` as `A` minus `Y` because it's going to be equal to: \n",
+    "\n",
+    "$$\n",
+    "dZ = A - Y \\\\\n",
+    "dZ = \\begin{bmatrix}\n",
+    "a^{(1)} - y^{(1)} & a^{(2)} - y^{(2)} & \\ldots & a^{(m)} - y^{(m)} \\\\ \n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "In order to compute `db`, we sum all elements of `dz` and divide by the number of elements `m` as:\n",
+    "\n",
+    "$$\n",
+    "db = \\frac{1}{m} \\sum_{i=1}^{m} dz^{(i)}\n",
+    "$$\n",
+    "\n",
+    "In a vectorized implementation using python, we can run:\n",
+    "\n",
+    "```python\n",
+    "db = 1./m * np.sum(dZ)\n",
+    "```\n",
+    "\n",
+    "Finally, for computing `dw` in non-vectorized version, we have:\n",
     "\n",
     "$\n",
-    "J = 0; \\ \\ db = 0; \\\\\n",
-    "dw = np.zeros((n_x, 1)); \\\\\n",
-    "\\\\\n",
-    "\\text{For}\\ \\ i=1\\ \\ \\text{to}\\ \\ m \\\\\n",
-    "\\hspace{15pt}z^{(i)} = w^Tx^{(i)} + b \\\\ \n",
-    "\\hspace{15pt}a^{(i)} = \\sigma(z^{(i)}) \\\\\n",
-    "\\hspace{15pt}J\\ += - [y^{(i)}\\ log(a^{(i)}) + (1 - y^{(i)})\\ log(1 - a^{(i)})] \\\\\n",
-    "\\hspace{15pt}dz^{(i)} = a^{(i)} - y^{(i)} \\\\\n",
-    "\\hspace{15pt}dw\\ += x^{(i)}dz^{(i)} \\\\\n",
-    "\\hspace{15pt}db\\ += dz^{(i)} \\\\\n",
-    "\\hspace{15pt}J\\ /=\\ m \\\\\n",
-    "\\hspace{15pt}dw\\ /=\\ m \\\\\n",
-    "\\hspace{15pt}db\\ /=\\ m \\\\\n",
-    "\\text{End for}\n",
+    "dw = 0 \\\\\n",
+    "dw\\ += x^{(1)} dz^{(1)} \\\\\n",
+    "dw\\ += x^{(2)} dz^{(2)} \\\\\n",
+    "\\ldots \\\\\n",
+    "dw\\ += x^{(m)} dz^{(m)} \\\\\n",
+    "dw\\ /= m\n",
     "$\n",
     "\n",
-    "### Updating weights\n",
+    "On the other hand, with a vectorized implementation, we have:\n",
     "\n",
-    "$\n",
-    "w\\ := w - \\alpha dw \\\\\n",
-    "b\\ := b - \\alpha db \\\\\n",
-    "$"
+    "$$\n",
+    "dw = \\frac{1}{m} X dZ^T\n",
+    "$$\n",
+    "\n",
+    "Representing each matrix of the equation, we have:\n",
+    "\n",
+    "$$\n",
+    "dw = \\frac{1}{m} \\begin{bmatrix}\n",
+    "| & | &  & |\\\\\n",
+    "x^{(1)} & x^{(2)} & \\dots & x^{(m)} \\\\\n",
+    "| & | &  & |\\\\\n",
+    "\\end{bmatrix} \\begin{bmatrix}\n",
+    "dz^{(1)} \\\\\n",
+    "dz^{(2)} \\\\\n",
+    "\\ldots \\\\\n",
+    "dz^{(m)}\n",
+    "\\end{bmatrix} = \\frac{1}{m} \\begin{bmatrix}\n",
+    "x^{(1)} dz^{(1)} & x^{(2)} dz^{(2)} & \\ldots & x^{(m)} dz^{(m)} \\\\\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "which generates a ($1, m$) matrix. Finally, our algorithm to compute the derivatives becomes:\n",
+    "\n",
+    "$$\n",
+    "\\begin{matrix}\n",
+    "Z = w^{T}X + b & \\text{# np.dot(w.T, X) + b} \\\\\n",
+    "A = \\sigma(Z)  & \\\\\n",
+    "dZ = A - Y & \\\\\n",
+    "dw = \\frac{1}{m} X dZ^{T} & \\\\\n",
+    "db = \\frac{1}{m} \\text{np.sum(dZ)} & \\\\\n",
+    "\\end{matrix}\n",
+    "$$\n",
+    "\n",
+    "And for update weights, we compute:\n",
+    "\n",
+    "$$\n",
+    "w = w - \\alpha dw \\\\\n",
+    "b = b - \\alpha db \\\\\n",
+    "$$\n",
+    "\n",
+    "Below, there is an example of the Python implementation of this vectorized version:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize elements\n",
+    "def sigmoid(Z):\n",
+    "    return 1./(1. + np.exp(-1.*Z))\n",
+    "\n",
+    "#hyperparameter\n",
+    "lr = 0.1\n",
+    "nb_epochs = 10\n",
+    "# input (nx, m) matrix 3 features, 4 examples\n",
+    "X = np.array([\n",
+    "    [0.1, 0.1, 0.1, 0.1],\n",
+    "    [0.2, 0.2, 0.2, 0.2],\n",
+    "    [0.3, 0.3, 0.3, 0.3]\n",
+    "])\n",
+    "n, m = X.shape\n",
+    "Y = np.array([1, 2, 0, 2])\n",
+    "\n",
+    "# weights (1, n) matrix\n",
+    "w = np.array([0.02, 0.03, 0.01])\n",
+    "dw = np.zeros((1, m))\n",
+    "# bias\n",
+    "b = np.array([1.0])\n",
+    "db = 0\n",
+    "\n",
+    "Z = np.zeros((1, m))\n",
+    "dZ = np.zeros((1, m))\n",
+    "A = np.zeros((1, m))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: 0.718222810093\n",
+      "Error: 0.709879917577\n",
+      "Error: 0.702678351072\n",
+      "Error: 0.696521727895\n",
+      "Error: 0.691322332225\n",
+      "Error: 0.687000366625\n",
+      "Error: 0.683483249913\n",
+      "Error: 0.680704964154\n",
+      "Error: 0.678605451445\n",
+      "Error: 0.677130059769\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(nb_epochs):\n",
+    "    Z = np.dot(w.T, X) + b\n",
+    "    A = sigmoid(Z)\n",
+    "    dZ = A - Y\n",
+    "    dw = 1./m * np.dot(X, dZ.T)\n",
+    "    db = 1./m * np.sum(dZ)\n",
+    "    J = 1./m * (- np.dot(Y, np.log(A)) + np.dot((1 - Y), np.log(1 - A)))\n",
+    "    \n",
+    "    w = w - lr*dw\n",
+    "    b = b - lr*db\n",
+    "    print(\"Error: {}\".format(J))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Implementing Vectorization in Backward Propagation \n",
-    "\n",
-    "$\n",
-    "dz^{(1)} = a^{(1)} - y^{(1)} \\hspace{15pt} dz^{(2)} = a^{(2)} - y^{(2)} \\dots \\\\\n",
-    "dZ = [dz^{(1)}\\ \\ dz^{(2)}\\ \\ \\dots dz^{(m)}] \\\\\n",
-    "$\n",
-    "\n",
-    "Given that:\n",
-    "\n",
-    "$\n",
-    "A = [a^{(1)}\\ \\ a^{(2)}\\ \\ \\dots a^{(m)}]  \\hspace{30pt} Y = [y^{(1)}\\ \\ y^{(2)}\\ \\ \\dots y^{(m)}]\\\\\n",
-    "dZ = A - Y \\hspace{15pt}\\rightarrow\\hspace{15pt} [a^{(1)}y^{(1)}\\ \\ a^{(2)}y^{(2)}\\ \\ \\dots ]\\\\ \n",
-    "db = \\frac{1}{m} np.sum(dZ) \\\\\n",
-    "dw = \\frac{1}{m} XdZ^T\n",
-    "$\n",
-    "\n",
-    "$\n",
-    "dw = \\frac{1}{m} \\begin{bmatrix}\n",
-    "| & | &  & |\\\\\n",
-    "x^{(1)} & x^{(2)} & \\dots & x^{(m)} \\\\\n",
-    "| & | &  & |\\\\\n",
-    "\\end{bmatrix}\\begin{bmatrix}\n",
-    "dz^{(1)}\\\\\n",
-    "dz^{(2)}\\\\\n",
-    "\\vdots \\\\\n",
-    "dz^{(m)}\\\\\n",
-    "\\end{bmatrix}\n",
-    "$\n"
+    "# Broadcasting in Python\n",
+    "\n"
    ]
   },
   {
@@ -536,6 +658,18 @@
     "&#9745; ($n_x, m$)<br>\n",
     "&#9744; ($m, $)<br>\n",
     "&#9744; ($m, 1$)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. How do you compute the derivative of `b` in one line of code in Python numpy?<br>\n",
+    "\n",
+    "&#9745; `1 / m*(np.sum(dz))`<br>\n",
+    "&#9744; `1 - m(np.sum(dz))`<br>\n",
+    "&#9744; `m(np.sum(dz))`<br>\n",
+    "&#9744; `1 * m(np.sum(dz))`<br>"
    ]
   },
   {
