--- a/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/1. Python and Vectorization.ipynb
+++ b/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/1. Python and Vectorization.ipynb
@@ -626,7 +626,91 @@
    "metadata": {},
    "source": [
     "# Broadcasting in Python\n",
-    "\n"
+    "\n",
+    "In order to understand broadcasting in Python, we will consider as an example the matrix below. It shows the number of calories from carbohydrates, proteins, and fats in 100 grams of four different foods. So for example, a 100 grams of apples turns out, has 56 calories from carbs, and much less from proteins and fats. Whereas, in contrast, a 100 grams of beef has 104 calories from protein and 135 calories from fat. \n",
+    "\n",
+    "|     $-$ | Apples | Beef  | Eggs | Potatoes |\n",
+    "| :------ | :----: | :---: | :--: | :------: |\n",
+    "| Carb    |   56.0 |   0.0 |  4.4 |     68.0 |\n",
+    "| Protein |    1.2 | 104.0 | 52.0 |      8.0 |\n",
+    "| Fat     |    1.8 | 135.0 | 99.0 |      0.9 |\n",
+    "\n",
+    "Let's say your goal is to calculate the percentage of calories from carbs, proteins and fats for each of the four foods. For example, if you look at the first column and add up the numbers you get that 100 grams of apple has (56 + 1.2 + 1.8) = 59 calories. And so as a percentage the percentage of calories from carbohydrates in an apple would be 56 over 59, that's about 94.9%. \n",
+    "\n",
+    "Below, we have the Python code that implements this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix A:\n",
+      "[[ 56.    0.    4.4  68. ]\n",
+      " [  1.2 104.   52.    8. ]\n",
+      " [  1.8 135.   99.    0.9]]\n",
+      "\n",
+      "Total calories of each food:\n",
+      "[ 59.  239.  155.4  76.9]\n",
+      "\n",
+      "Percentage of calories:\n",
+      "[[94.91525424  0.          2.83140283 88.42652796]\n",
+      " [ 2.03389831 43.51464435 33.46203346 10.40312094]\n",
+      " [ 3.05084746 56.48535565 63.70656371  1.17035111]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[56.0,   0.0,  4.4, 68.0],\n",
+    "              [ 1.2, 104.0, 52.0,  8.0],\n",
+    "              [ 1.8, 135.0, 99.0,  0.9]])\n",
+    "print('Matrix A:')\n",
+    "print(A)\n",
+    "print('')\n",
+    "cal = A.sum(axis=0)\n",
+    "print('Total calories of each food:')\n",
+    "print(cal)\n",
+    "print('')\n",
+    "percentage = 100*A/cal.reshape(1,4)\n",
+    "print('Percentage of calories:')\n",
+    "print(percentage)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The last command `percentage = 100*A/cal.reshape(1,4)` takes the matrix `A` and divided it by a (1,4) matrix, giving the matrix of percentages. Broadcasting allows us to perform such operation, *i.e.*, divide a (3,4) matrix by a (1,4) matrix. The process of broadcasting also occurs when we multiply an array by a scalar. For example, multiplying the matrix `B = [1, 2, 3]` by the scalar `c=2`, we obtain as result an array equals to `[2, 4, 6]` as presented in the example below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multiplication of numpy array by a scalar: [2 4 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "B = np.array([1,2,3])\n",
+    "c = 2\n",
+    "print('Multiplication of numpy array by a scalar: {}'.format(B*c))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An example of the application of broadcasting in Logistic Regression is using it to calculate `Z` when summing the bias with the matrix $w^TX$."
    ]
   },
   {
@@ -673,131 +757,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "&#9744; "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "non-broadcastable output operand with shape (2,1) doesn't match the broadcast shape (2,2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-96-38039b849f9c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mJ\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0mdz\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m     \u001b[0mdw\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mdz\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m     \u001b[0mdb\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mdz\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: non-broadcastable output operand with shape (2,1) doesn't match the broadcast shape (2,2)"
-     ]
-    }
-   ],
-   "source": [
-    "x = np.array([\n",
-    "    [0.1, 0.1],\n",
-    "    [0.2, 0.2],\n",
-    "    [0.3, 0.3]\n",
-    "])\n",
-    "m = x.shape[0]\n",
-    "w = np.array([0.2,0.3])\n",
-    "b = [1.0, 1.0]\n",
-    "y = np.array([1, 2, 3])\n",
-    "z = np.zeros((m, 1))\n",
-    "a = np.zeros((m, 1))\n",
-    "dz = np.zeros((m, 1))\n",
-    "w = np.array([0.2, 0.3])\n",
-    "n = w.shape[0]\n",
-    "dw = np.zeros((n, 1)) \n",
-    "b = np.array([1.0])\n",
-    "db = np.zeros(b.shape)\n",
+    "Which of the following numpy line of code would sum the values in a matrix `A` vertically?<br>\n",
     "\n",
-    "J = 0\n",
-    "\n",
-    "for i in range(x.shape[0]):\n",
-    "    z[i] = np.dot(w, x[i]) + b\n",
-    "    a[i] = sigmoid(z[i])\n",
-    "    J += -(y[i] * math.log(a[i]) + (1 - y[i]) * math.log(1 - a[i]))\n",
-    "    dz[i] = a[i] - y[i]\n",
-    "    dw += dz[i] * x[i]\n",
-    "    db += dz[i]\n",
-    "db"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.1, 0.1],\n",
-       "       [0.2, 0.2],\n",
-       "       [0.3, 0.3]])"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.1, 0.2, 0.3])"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x.T[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "J, dw1, dw2, db = 0.0, 0.0, 0.0, 0.0\n",
-    "for i in range(x.shape[0]):\n",
-    "    z[i] = np.dot(x[i], w) + b\n",
-    "    a[i] = sigmoid(z[i])\n",
-    "    J += -(y[i] * math.log(a[i]) + (1 - y[i]) * math.log(1 - a[i]))\n",
-    "    dz[i] = a[i] - y[i]\n",
-    "    print x.shape\n",
-    "    print dz.shape\n",
-    "    dw += x.T[i] * dz[i]\n",
-    "    db += dz[i]\n",
-    "J /= m\n",
-    "dw /= m\n",
-    "db /= m\n",
-    "    \n",
-    "w = w - lr * dw\n",
-    "b = b - lr * db\n",
-    "\n",
-    "print('Initial error: 0.0')\n",
-    "print('Error: {}'.format(J))\n",
-    "print('Initial weights: [0.2, 0.3]')\n",
-    "print('Updated weights: {}'.format(w))"
+    "&#9744; `A.sum(axis )`<br>\n",
+    "&#9745; `A.sum(axis = 0)`<br>\n",
+    "&#9744; `A.sum(axis = 1)"
    ]
   }
  ],
