--- a/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/1. Python and Vectorization.ipynb
+++ b/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 2/1. Python and Vectorization.ipynb
@@ -710,7 +710,165 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "An example of the application of broadcasting in Logistic Regression is using it to calculate `Z` when summing the bias with the matrix $w^TX$."
+    "An example of the application of broadcasting in Logistic Regression is using it to calculate `Z` when summing the bias with the matrix $w^TX$.\n",
+    "\n",
+    "# A Note on Numpy/Python Vectors\n",
+    "\n",
+    "Avoid Rank-1 arrays in Numpy. Rank-1 arrays are arrays that are neither row nor column vectors. In Python they are represented as `(value,)` array (*e.g*., `(5,)`). For example, consider we will create a random numpy array with 5 elements as:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.86885334 -0.56783931  0.15419041  0.56043105 -0.43289253]\n",
+      "(5,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randn(5)\n",
+    "print(a)\n",
+    "print(a.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As said before, a Rank-1 array is neither a row nor column vector. Thus, when we try to transpose it, it does not change its form. For example, consider that we want to transpose the vector created before, it generates:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.86885334 -0.56783931  0.15419041  0.56043105 -0.43289253]\n",
+      "(5,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = a.T\n",
+    "print(b)\n",
+    "print(b.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To avoid creating a Rank-1 array, we have to explictly specify the shape of the array. Thus, instead of creating the random numpy array as before, we create it as:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.4436642 ]\n",
+      " [ 0.05796461]\n",
+      " [-0.73062291]\n",
+      " [-0.75503853]\n",
+      " [ 0.94046183]]\n",
+      "(5, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randn(5,1)\n",
+    "print(a)\n",
+    "print(a.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we can transpose it and the column vector will become a row vector."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.4436642   0.05796461 -0.73062291 -0.75503853  0.94046183]]\n",
+      "(1, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = a.T\n",
+    "print(b)\n",
+    "print(b.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cost function for logistic regression\n",
+    "\n",
+    "In logistic regression, we have that the prediction $\\hat{y} is\n",
+    "\n",
+    "$$\n",
+    "\\hat{y} = \\sigma(w^TX + b)\\ \\ \\ \\ \\text{where}\\ \\ \\ \\ \\sigma(Z) = \\frac{1}{1+e^{-Z}}\n",
+    "$$\n",
+    "\n",
+    "And we want to interpret $\\hat{y}$ as the $p(y=1|x)$, *i.e.*, the chance that $y = 1$ for a given set of input features $x$. Another way to say this is that\n",
+    "\n",
+    "$\n",
+    "\\begin{matrix}\n",
+    "\\text{if}\\ \\ \\ y=1 & p(y|x) = \\hat{y} \\\\\n",
+    "\\text{if}\\ \\ \\ y=0 & p(y|x) = 1-\\hat{y} \\\\\n",
+    "\\end{matrix}\n",
+    "$\n",
+    "\n",
+    "Merging both equation into a single equation, we have:\n",
+    "\n",
+    "$$\n",
+    "p(y|x) = \\hat{y}^y (1-\\hat{y})^{(1-y)}\n",
+    "$$\n",
+    "\n",
+    "As the log function is a strictly monotonically increasing function, maximizing $\\log p(y|x)$ should give you a similar result as optimizing $p(y|x)$, and if you compute $\\log p(y|x)$, it is equal to $\\log \\hat{y}^y (1 - \\hat{y})^{(1 - y)}$. So, that simplifies to:\n",
+    "\n",
+    "$$\n",
+    "\\log p(y|x) = y \\log \\hat{y} + (1-y) \\log (1 - \\hat{y}) \\\\\n",
+    "\\log p(y|x) = - \\mathcal{L}(\\hat{y} - y)\n",
+    "$$\n",
+    "\n",
+    "Taking into account all the examples ($m$) in the training set, we have the cost:\n",
+    "\n",
+    "$\n",
+    "\\log p(\\text{labels in training set}) = \\log \\prod_{i=1}^{m} p(y^{(i}|x^{(i)}) \\\\\n",
+    "\\log p(\\text{labels in training set}) = \\sum_{i=1}^{m} \\log p(y^{(i}|x^{(i)}) \\\\\n",
+    "\\log p(\\text{labels in training set}) = - \\sum_{i=1}^{m} \\mathcal{L}(\\hat{y}^{(i)}, y^{(i)})\n",
+    "$ \n",
+    "\n",
+    "As we want to minimize the cost, *i.e.*, maximize the log likelihood, we have:\n",
+    "\n",
+    "$$\n",
+    "J(w, b) = \\frac{1}{m} \\sum_{i=1}^{m} \\mathcal{L}(\\hat{y}^{(i)}, y^{(i)})\n",
+    "$$"
    ]
   },
   {
@@ -760,11 +918,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Which of the following numpy line of code would sum the values in a matrix `A` vertically?<br>\n",
+    "4. Which of the following numpy line of code would sum the values in a matrix `A` vertically?<br>\n",
     "\n",
     "&#9744; `A.sum(axis )`<br>\n",
     "&#9745; `A.sum(axis = 0)`<br>\n",
     "&#9744; `A.sum(axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. What kind of array has dimensions in this format: `(10, )`?<br>\n",
+    "\n",
+    "&#9744; An identity array<br>\n",
+    "&#9745; A rank 1 array<br>\n",
+    "&#9744; A rank 0 array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6. True or False: Minimizing the loss corresponds with maximizing $\\log p(y|x)$.\n",
+    "\n",
+    "&#9744; False<br>\n",
+    "&#9745; True"
    ]
   }
  ],
