Week 3 of Neural Networks

--- a/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 3/Neural Networks - Vectorizing through all examples.ipynb
+++ b/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 3/Neural Networks - Vectorizing through all examples.ipynb
@@ -123,7 +123,7 @@
     "\n",
     "$$\n",
     "a^{[1]} = \\sigma(z^{[1]}) \\\\\n",
-    "\\begin{bmatrix}\n",
+    "\\left \\begin{bmatrix}\n",
     "a^{[1]}_1 \\\\\n",
     "a^{[1]}_2 \\\\\n",
     "a^{[1]}_3 \\\\\n",
