--- a/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 3/Neural Networks - Vectorizing through all examples.ipynb
+++ b/Coursera/Deeplearning.ai/Neural Networks and Deep Learning/Week 3/Neural Networks - Vectorizing through all examples.ipynb
@@ -123,7 +123,10 @@
     "\n",
     "$$\n",
     "a^{[1]} = \\sigma(z^{[1]}) \\\\\n",
-    "\\left \\begin{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
     "a^{[1]}_1 \\\\\n",
     "a^{[1]}_2 \\\\\n",
     "a^{[1]}_3 \\\\\n",
@@ -132,9 +135,8 @@
     "z^{[1]}_1 \\\\\n",
     "z^{[1]}_2 \\\\\n",
     "z^{[1]}_3 \\\\\n",
-    "z^{[1]}_4\n",
-    "\\end{bmatrix}\n",
-    "\\right )\n",
+    "z^{[1]}_4 \\\\\n",
+    "\\end{bmatrix} \\right )\n",
     "$$\n",
     "\n",
     "Expanding the computation for all layers of our network, we have the computation and the dimensions as:\n",
@@ -1001,69 +1003,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python2.7/dist-packages/ipykernel_launcher.py:1: RuntimeWarning: divide by zero encountered in log\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n",
-      "/usr/local/lib/python2.7/dist-packages/ipykernel_launcher.py:1: RuntimeWarning: invalid value encountered in log\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    }
-   ],
-   "source": [
-    "loss = (1./m) * (-np.dot(Y,np.log(A2).T) - np.dot(1-Y, np.log(1-A2).T))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "shapes (3,1) and (4,3) not aligned: 1 (dim 1) != 4 (dim 0)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-5f289a310a52>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mdW2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1.\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mm\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdZ2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mA1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0mdb2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1.\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mm\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdZ2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeepdims\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0mdZ1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mW2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdZ2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mdA1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m     \u001b[0mdW1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1.\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mm\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdZ1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0mdb1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1.\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mm\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdZ1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeepdims\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: shapes (3,1) and (4,3) not aligned: 1 (dim 1) != 4 (dim 0)"
-     ]
-    }
-   ],
-   "source": [
-    "#hyperparameter\n",
-    "lr = 0.1\n",
-    "nb_epochs = 10\n",
-    "\n",
-    "### Process forward and backward\n",
-    "for i in range(nb_epochs):\n",
-    "    # forward\n",
-    "\n",
-    "    # backward\n",
-    "    dZ2 = A2.T - Y\n",
-    "    dW2 = 1./m * np.dot(dZ2, A1.T)\n",
-    "    db2 = 1./m * np.sum(dZ2, axis=1, keepdims=True)\n",
-    "    dZ1 = np.dot(W2, dZ2) * dA1\n",
-    "    dW1 = 1./m * np.dot(dZ1, X.T)\n",
-    "    db1 = 1./m * np.sum(dZ1, axis=1, keepdims=True)\n",
-    "    \n",
-    "    J = 1./m * (- np.dot(Y, np.log(A2)) + np.dot((1 - Y), np.log(1 - A2)))\n",
-    "    \n",
-    "    W1 = W1 - lr*dW1\n",
-    "    b1 = b1 - lr*db1\n",
-    "    W2 = W2 - lr*dW2\n",
-    "    b2 = b2 - lr*db2\n",
-    "    print(\"Error: {}\".format(J))\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1078,47 +1017,6 @@
     "\n",
     "Unlike weights, bias can be initialized with zero values. Usually, weights are multiplied by a small value (*e.g.*, 0.01) reducing weights so that when calculating the values of $Z$, scores get close to the non-flat (derivation different than zero) part of the function. For example, consider the sigmoid function presented in the plot illustred previously. Now, imaginge that $z = W^TX+b$ obtain a high value due to the high values of $W$ (*e.g.*, 10). Observing the plot, we see that the derivative of $z=10$ is zero, *i.e*, the function is saturated. Thus, when updating weights, the derivative is not effective.  "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "&#9744; "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3, 4)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "W1 = np.array([[0.02, 0.03, 0.01, 0.04], \n",
-    "               [0.04, 0.01, 0.02, 0.05], \n",
-    "               [0.05, 0.09, 0.01, 0.09]])\n",
-    "W1.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
