--- a/Coursera/Duke University/Probability-intro/Week 1/Exercises.ipynb
+++ b/Coursera/Duke University/Probability-intro/Week 1/Exercises.ipynb
@@ -17,7 +17,7 @@
     "---\n",
     "**1.1 Migraine and acupuncture**. A migraine is a particularly painful type of headache, which patients sometimes wish to treat with acupuncture. To determine whether acupuncture relieves migraine pain, researchers conducted a randomized controlled study where 89 females diagnosed with migraine headaches were randomly assigned to one of two groups: treatment or control. 43 patients in the treatment group received acupuncture that is specifically designed to treat migraines. 46 patients in the control group received placebo acupuncture (needle insertion at non-acupoint locations). 24 hours after patients received acupuncture, they were asked if they were pain free. Results are summarized in the contingency table below.\n",
     "\n",
-    "|           | Yes | No  | Total |\n",
+    "| &nbsp;    | Yes | No  | Total |\n",
     "| :-------- | --: | --: | :---: | \n",
     "| Treatment |  10 |  33 |    43 |\n",
     "| Control   |   2 |  44 |    46 |\n",
